apps/staging/rust-slight/deployment.enc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: rust-slight
    namespace: rust-slight
spec:
    replicas: 1
    selector:
        matchLabels:
            app: rust-slight
    template:
        metadata:
            labels:
                app: rust-slight
        spec:
            runtimeClassName: wasmtime-slight-v1
            containers:
                - name: rust-slight
                  image: ghcr.io/huangyingting/rust-slight:main
                  imagePullPolicy: IfNotPresent
                  command:
                    - /
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2023-01-28T08:15:12Z"
    mac: ENC[AES256_GCM,data:mpZVaAmTSo11eGIBRp/vPX6IIiQvfXNGQawW7bwa/pvoLOfdmd+ZZZxZv9FEWPzz46NLaW5mXRqhFio78EbTDkru82bM+htEUpd/E6z+BGt3UB04/JA+cddGFglQPilBHzSZVfPY9B24+oIpWX4a4nKoN5v8O2TV0jseFlBL6P0=,iv:NX6mR8AUi3OpjTx63mcqTOk6Rgj88LMQJFsL7UI9ct8=,tag:V8NY8LpeeIqS1ibvzkE4AA==,type:str]
    pgp:
        - created_at: "2023-01-28T08:15:11Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA38T7Az157GMAQ//dFyBXk4f1SUoC1m4ps6N8RqLqYc0WbNc5m6kqkdBx5DM
[...]
            =S9j5
            -----END PGP MESSAGE-----
          fp: 129994A38E40322EE2A4FA6CB59C51DA13B1BF22
    encrypted_regex: ^(host|value)$
    version: 3.7.3
